# vireka-api

./: .env.example  .gitignore  Dockerfile  Makefile  citiesList.json  docker-compose.yaml  fetchVillageJson.ipynb  geospatial_dict.csv  geospatial_dict.json  kecamatanList.json  kota_coords.json  main.py  pyproject.toml
data/: AllCoordinates.py  coordinates.py  kota_coords.py
models/: poverty_model.pkl
output/: duri_kepa.geojson  duri_kepa.json
src/: api.py
src/routes/: __init__.py  ai.py  auth.py  citizen_reports.py
utils/: environmental_fetch.py  functions.py
